Fix border around thumbnails on small screens

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -744,6 +744,7 @@ footer {
 
     .image-gallery-thumbnails {
         padding-top: 8px;
+        display: inline-block;
 
         img {
             max-height: 120px;
